--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
     
     <footer>
-        http://127.0.0.1:5500/index.html
+        <img src="" alt="./imagenes/logosbootcamp.png">
     </footer>
 </body>
 </html>
